alignment fixed

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ nav ul li a:hover{
 
 .p-right .desc{
     position: relative;
-    top: -70%;
+    top:  -15%;
     left: 0%;
 }
 
@@ -166,7 +166,7 @@ nav ul li a:hover{
 
 .p-left .desc{
     position: relative;
-    top: -65%;
+    top: -15%;
     left: 50%;
 }
 
